@startuml UserService_Integration

!define EXCEPTION_COLOR #FFCDD2
!define DTO_COLOR #E1BEE7
!define ENUM_COLOR #C5CAE9
!define FACTORY_COLOR #C8E6C9

skinparam backgroundColor #FAFAFA
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 5
skinparam packageStyle rectangle

package "com.careernexus.userservice.exception" <<Rectangle>> {

    abstract class UserServiceException <<BaseException>> EXCEPTION_COLOR {
        - errorCode: ErrorCode
        + UserServiceException(message: String)
        + UserServiceException(errorCode: ErrorCode, message: String)
        + getErrorCode(): ErrorCode
    }

    class UserNotFoundException <<Exception>> EXCEPTION_COLOR {
        + UserNotFoundException(userId: Long)
    }

    class UserAlreadyExistsException <<Exception>> EXCEPTION_COLOR {
        + UserAlreadyExistsException(email: String)
    }

    class InvalidCredentialsException <<Exception>> EXCEPTION_COLOR {
        + InvalidCredentialsException()
    }

    class TokenExpiredException <<Exception>> EXCEPTION_COLOR {
        + TokenExpiredException()
    }

    class InvalidTokenException <<Exception>> EXCEPTION_COLOR {
        + InvalidTokenException()
    }

    class EmailNotVerifiedException <<Exception>> EXCEPTION_COLOR {
        + EmailNotVerifiedException(email: String)
    }

    class ErrorResponse <<DTO>> DTO_COLOR {
        - timestamp: LocalDateTime
        - status: int
        - error: String
        - message: String
        - path: String
        - code: String
        --
        + getters/setters()
    }

    enum ErrorCode <<Enum>> ENUM_COLOR {
        USER_NOT_FOUND
        USER_ALREADY_EXISTS
        INVALID_CREDENTIALS
        TOKEN_EXPIRED
        INVALID_TOKEN
        EMAIL_NOT_VERIFIED
        VALIDATION_ERROR
        INTERNAL_ERROR
    }

    class ErrorResponseFactory <<Factory>> FACTORY_COLOR {
        + create(ex: UserServiceException, path: String): ErrorResponse
        + create(status: int, code: ErrorCode, message: String, path: String): ErrorResponse
    }

    class GlobalExceptionHandler <<ControllerAdvice>> EXCEPTION_COLOR {
        + handleUserServiceException(ex: UserServiceException, req: HttpServletRequest): ResponseEntity<ErrorResponse>
        + handleValidationException(ex: MethodArgumentNotValidException, req: HttpServletRequest): ResponseEntity<ErrorResponse>
        + handleGenericException(ex: Exception, req: HttpServletRequest): ResponseEntity<ErrorResponse>
    }
}

UserServiceException <|-- UserNotFoundException
UserServiceException <|-- UserAlreadyExistsException
UserServiceException <|-- InvalidCredentialsException
UserServiceException <|-- TokenExpiredException
UserServiceException <|-- InvalidTokenException
UserServiceException <|-- EmailNotVerifiedException

GlobalExceptionHandler ..> ErrorResponseFactory : uses
ErrorResponseFactory ..> ErrorResponse : creates
UserServiceException --> ErrorCode : has

@enduml